--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,17 @@ main {
 img {
 	margin: 40px 8px 0 8px;
 }
+button {
+	font-family: Raleway;
+	font-size: 20px;
+	color: white;
+	letter-spacing: 1px;
+	background: #F15B31;
+	margin: 30px;
+	padding: 10px;
+	font-weight: 400;
+	border-radius: 10px;
+}
 footer {
 	text-transform: uppercase;
 	padding: 0 20px 0 20px;
